<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherWebServiceCopy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">天气预报</string>
    <string name="citySelect">请选择城市</string>
    <string name="city_str">城</string>
    <color name="white">#FFFFFF</color>
<string name="today_wea">今日天气</string>
<string name="xiaotieshi">今日小贴士今日小贴士今日小贴士</string>
<string name="jinri">今日天气实况</string>
<string name="qiwen">气温：</string>
    <string name="fengli">风力：</string>
    <string name="kongqi">空气质量：</string>
    <string name="ziwai">紫外线强度：</string>
    <string name="shidu">湿度：</string>
        <string name="city">城市</string>
    <string name="province">省份</string>
</resources>
