<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/content_today_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/content_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/today_wea" />

            <TextView
                android:id="@+id/today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <TextView
            android:id="@+id/xiaotieshi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="right"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/xiaotieshi" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2" >

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/city_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/a_0" />

                <TextView
                    android:id="@+id/today_weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="TextView" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/jinri" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/qiwen" />

                    <TextView
                        android:id="@+id/qiweng"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Text" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/shidu" >
                    </TextView>

                    <TextView
                        android:id="@+id/shidu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Text" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/fengli" >
                    </TextView>

                    <TextView
                        android:id="@+id/fengli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="Text" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/kongqi" >
                    </TextView>

                    <TextView
                        android:id="@+id/kongqi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Text" >
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" >

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:paddingTop="5dp"
                        android:text="@string/ziwai" >
                    </TextView>

                    <TextView
                        android:id="@+id/zhiwai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Text" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
   <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1000"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/content_small_bg1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.33"
            android:background="@drawable/content_small_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tomorrow_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <ImageView
                android:id="@+id/tomorrow_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a_0" >
            </ImageView>

            <TextView
                android:id="@+id/tomorrow_tianqi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>

            <TextView
                android:id="@+id/tomorrow_qiweng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_small_bg2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_weight="0.33"
            android:background="@drawable/content_small_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/afterday_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <ImageView
                android:id="@+id/afterday_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a_0" >
            </ImageView>

            <TextView
                android:id="@+id/afterday_tianqi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>

            <TextView
                android:id="@+id/afterday_qiweng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/content_small_bg3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.33"
            android:background="@drawable/content_small_bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nextday_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

            <ImageView
                android:id="@+id/nextday_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/a_0" >
            </ImageView>

            <TextView
                android:id="@+id/nextday_tianqi"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>

            <TextView
                android:id="@+id/nextday_qiweng"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/white" >
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>